--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "@tailwindcss/vite": "^4.0.6",
     "daisyui": "^5.0.0-beta.7",
     "lucide-vue-next": "^0.475.0",
