--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.0.6",
-    "daisyui": "^5.0.0-beta.7",
-    "lucide-vue-next": "^0.475.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "daisyui": "^5.0.0",
+    "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.9",
     "vue": "latest",
     "vue-router": "latest"
   }
