--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
     "tailwindcss": "^4.0.11",
+    "uuid": "^11.1.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.2"
   }
 }
