--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.0.11",
-    "daisyui": "^5.0.0",
-    "lucide-vue-next": "^0.477.0",
-    "nuxt": "^3.15.4",
-    "tailwindcss": "^4.0.11",
+    "@tailwindcss/vite": "^4.0.14",
+    "daisyui": "^5.0.6",
+    "lucide-vue-next": "^0.483.0",
+    "nuxt": "^3.16.1",
+    "tailwindcss": "^4.0.14",
     "uuid": "^11.1.0",
     "vue": "latest",
     "vue-router": "latest",
+    "vue3-simple-icons": "^13.2.0",
     "zod": "^3.24.2"
   }
 }
