--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.1.3",
-    "daisyui": "^5.0.12",
-    "lucide-vue-next": "^0.487.0",
+    "@tailwindcss/vite": "^4.1.4",
+    "daisyui": "^5.0.28",
+    "date-fns": "^4.1.0",
+    "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.4",
     "uuid": "^11.1.0",
     "vue": "latest",
-    "vue-router": "latest",
+    "vue-router": "^4.5.1",
     "vue3-simple-icons": "^13.2.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   }
 }
