--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.1.6",
-    "@vueuse/nuxt": "^13.1.0",
+    "@pinia/nuxt": "^0.11.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/nuxt": "^13.2.0",
     "daisyui": "^5.0.35",
     "date-fns": "^4.1.0",
-    "lucide-vue-next": "^0.509.0",
-    "nuxt": "^3.17.2",
-    "tailwindcss": "^4.1.6",
+    "lucide-vue-next": "^0.510.0",
+    "nuxt": "^3.17.3",
+    "pinia": "^3.0.2",
+    "tailwindcss": "^4.1.7",
     "uuid": "^11.1.0",
-    "vue": "latest",
+    "vue": "^3.5.14",
     "vue-router": "^4.5.1",
     "vue3-simple-icons": "^13.2.0",
     "zod": "^3.24.4"
