--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
